[package]
name = "shortest_path"
version = "0.1.0"
authors = ["Sergey Veselkov <veselkovsd@yandex.ru>"]

[dependencies]
relm = "0.15.0"
relm-derive = "0.15.0"
relm-attributes = "0.15.0"
gtk = "0.5.0"
gdk = "0.9.0"
cairo-rs = "0.5.0"
serde = "1.0.79"
serde_derive = "1.0.79"
bincode = "1.0.1"
failure = "0.1.2"
